Fixed text overflow in product tile

--- a/491A/src/app/protected/selling/selling.component.scss
+++ b/491A/src/app/protected/selling/selling.component.scss
@@ -24,6 +24,10 @@
   font-size: 1.2em;
   margin-bottom: 8px;
   font-weight: bold;
+  overflow: hidden;
+  max-height: 60px;
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
 
 }
 
